Fixed navbar and separated scripts for each file

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,29 +8,41 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
+    <!-- Header & Navigation -->
     <header>
+        <div class="navbar-placeholder"></div>
+    </header>
+    <main>
         <div class="logo">
             <h1><span class="mind">Mind</span> & <span class="move">Move</span> Chess Foundation</h1>
             <!-- Contact Section -->
-    <section id="contact" class="contact">
-        <h2>Get In Touch</h2>
-        <button onclick="window.location.href='index.html'" class="btn" style="margin-bottom:20px;">Back to Home</button>
-        <div class="contact-container">
-            <form id="contact-form">
-                <input type="text" placeholder="Name" required>
-                <input type="email" placeholder="Email" required>
-                <textarea placeholder="Message" required></textarea>
-                <button type="submit" class="btn">Send Message</button>
-            </form>
-            <div class="contact-info">
-                <p><i class="fas fa-envelope"></i> info@mindandmovechess.org</p>
-                <p>
-                    <i class="fas fa-phone"></i> +254 0111231789
-                    <button id="call-btn" class="btn" style="margin-left:10px;">Call Now</button>
-                </p>
-                <p><i class="fas fa-map-marker-alt"></i> SOUTH B Avenue, Nairobi</p>
-            </div>
+            <section id="contact" class="contact">
+                <h2>Get In Touch</h2>
+                <button onclick="window.location.href='index.html'" class="btn" style="margin-bottom:20px;">Back to
+                    Home</button>
+                <div class="contact-container">
+                    <form id="contact-form">
+                        <input type="text" placeholder="Name" required>
+                        <input type="email" placeholder="Email" required>
+                        <textarea placeholder="Message" required></textarea>
+                        <button type="submit" class="btn">Send Message</button>
+                    </form>
+                    <div class="contact-info">
+                        <p><i class="fas fa-envelope"></i> info@mindandmovechess.org</p>
+                        <p>
+                            <i class="fas fa-phone"></i> +254 0111231789
+                            <button id="call-btn" class="btn" style="margin-left:10px;">Call Now</button>
+                        </p>
+                        <p><i class="fas fa-map-marker-alt"></i> SOUTH B Avenue, Nairobi</p>
+                    </div>
+                </div>
+                <div id="message-status" style="display:none; margin-top:15px; color:green; font-weight:bold;"></div>
+            </section>
         </div>
-        <div id="message-status" style="display:none; margin-top:15px; color:green; font-weight:bold;"></div>
-    </section>
+    </main>
+    <script type="module" src="scripts/script.js"></script>
+</body>
+
+</html>
