--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <!-- Header & Navigation -->
     <header>
         <!-- responsive navbar -->
-        <div class="nav-bar-placeholder"></div>
+        <div class="navbar-placeholder"></div>
     </header>
     <!-- About Section -->
     <section id="about" class="about">
@@ -21,7 +21,7 @@
         <div class="about-content">
             <div class="about-text">
                 <p>
-                    The <strong>The Olouch  Chess Foundation</strong> is dedicated to empowering youth and communities
+                    The <strong>The Olouch Chess Foundation</strong> is dedicated to empowering youth and communities
                     through the game of chess.
                     <br><br>
                     <strong>Our Objectives:</strong>
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script type="module" src="scripts/script.js"></script>
 </body>
 
 </html>
