--- a/programs.html
+++ b/programs.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <div class="logo">
-            <h1><span class="mind">Mind</span> & <span class="move">Move</span> Chess Foundation</h1>
+            <h1><span class="The Olouch Chess Foundation"></span> Chess Foundation</h1>
         </div>
         <!-- Programs Section -->
         <section id="programs" class="programs">
@@ -73,5 +73,6 @@
         <script type="module" src="scripts/script.js"></script>
         <script type="module" src="scripts/programs.js"></script>
 </body>
+
 
 </html>
