--- a/programs.html
+++ b/programs.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <div class="logo">
-            <h1><span class="The Olouch Chess Foundation"></span> Chess Foundation</h1>
+            <h1><span class="The Olouch Chess Foundation"></span>The Olouch Chess Foundation</h1>
         </div>
         <!-- Programs Section -->
         <section id="programs" class="programs">
@@ -76,3 +76,4 @@
 
 
 </html>
+
