--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <div class="logo">
-            <h1><span class="The Olouch Chess Fopundation"></span> Chess Foundation</h1>
+            <h1><span class="The Olouch Chess Fopundation"></span>The Olouch Chess Foundation</h1>
             <!-- Contact Section -->
             <section id="contact" class="contact">
                 <h2>Get In Touch</h2>
@@ -47,3 +47,4 @@
 
 
 </html>
+
