--- a/donate.html
+++ b/donate.html
@@ -69,7 +69,7 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module" src="scripts/script.js"></script>
-    <script src="scripts/donate.js"></script>
+    <script type="module" src="scripts/donate.js"></script>
 </body>
 
 </html>
