--- a/login.html
+++ b/login.html
@@ -18,17 +18,11 @@
     <!-- Login Modal (shows immediately when Login button is clicked) -->
     <div id="account-login-modal">
         <!-- go back button -->
-        
-        <form id="account-login-form">
-            <button type="button" class="back-btn" onclick="goBack()">Back</button>
-            <h2>Login</h2>
-            <label for="username">Username:</label>
-            <input type="text" name="username" placeholder="Username" required><br>
-            <label for="password">Password:</label>
-            <input type="password" name="password" placeholder="Password" required><br>
-            <button type="submit" class="login-btn">Login</button>
-        </form>
+
+        <div class="login-form-placeholder"></div>
     </div>
+    <!-- jQuery library for modal -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts/login.js"></script>
 </body>
 
