Added user session

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>The Olouch Chess Foundation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="images/chesslogo.png">
 </head>
 
 <body>
@@ -20,8 +21,9 @@
             <!-- Contact Section -->
             <section id="contact" class="contact">
                 <h2>Get In Touch</h2>
-                <button onclick="window.location.href='index.html'" class="btn" style="margin-bottom:20px;">Back to
-                    Home</button>
+                <button onclick="window.location.href='index.html'" class="btn" style="margin-bottom:20px;">
+                    Back to Home
+                </button>
                 <div class="contact-container">
                     <form id="contact-form">
                         <input type="text" placeholder="Name" required>
@@ -42,9 +44,7 @@
             </section>
         </div>
     </main>
-    <script type="module" src="scripts/script.js"></script>
+    <script type="module" src="scripts/scripts.js"></script>
 </body>
 
-
 </html>
-
