--- a/donate.html
+++ b/donate.html
@@ -7,6 +7,7 @@
     <title>Make a donation</title>
     <link rel="stylesheet" href="Styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="images/chesslogo.png">
 </head>
 
 <body class="donate-container">
@@ -18,7 +19,7 @@
     <section class="donate">
         <h2>Support Our Mission</h2>
         <div class="donate-content"></div><br>
-        <button class="back-to-home" onclick="window.location.href='index.html';">Back to Home</button><BR></BR>
+        <button class="back-to-home" onclick="window.location.href='index.php';">Back to Home</button><BR></BR>
         <hr>
         <BR></BR>
         <p>Your donation helps us provide free chess education to underserved communities. Every donation counts!
@@ -34,7 +35,7 @@
         <div class="wrapper overlay hidden">
             <div class="loader"></div>
         </div>
-       
+
         <!-- ...existing code... -->
         <div class="thank-you-message" id="thank-you-message">
             <h3>Thank You for Your Support!</h3>
@@ -49,9 +50,8 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="module" src="scripts/script.js"></script>
+    <script type="module" src="scripts/scripts.js"></script>
     <script type="module" src="scripts/donate.js"></script>
 </body>
-
 
 </html>
