--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>The Olouch Chess Foundation</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- logo link -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/chesslogo.png">
 </head>
 
 <body>
@@ -39,7 +41,7 @@
         <p>&copy; 2025 The Olouch Chess Foundation. All rights reserved.</p>
     </footer>
 
-    <script type="module" src="scripts/script.js"></script>
+    <script type="module" src="scripts/scripts.js"></script>
 </body>
 
 
