--- a/programs.html
+++ b/programs.html
@@ -14,6 +14,7 @@
     <header>
         <div class="navbar-placeholder"></div>
     </header>
+    <h1>Our Programs</h1>
 
     <script type="module" src="scripts/programs.js"></script>
 </body>
